// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.AlertBus UU5.Bricks.AlertBus onClose() 1`] = `
<AlertBus
  content="Alert in Bus"
  header="AlertBus-onClose"
  id="uuAlertID"
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus UU5.Bricks.AlertBus onClose() 2`] = `
<AlertBus
  content="Alert in Bus"
  header="AlertBus-onClose"
  id="uuAlertID"
  onClose={[Function]}
/>
`;

exports[`UU5.Bricks.AlertBus block=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus block=true 1`] = `
<Alert
  block={true}
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus ccrKey="<UU5.Parrot.Page ccrKey='UU5.Parrot.Page' />" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus className="my-classname" 1`] = `
<Alert
  className="uu5-bricks-alert-bus my-classname"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus className="test-classname" 1`] = `
<Alert
  className="uu5-bricks-alert-bus test-classname"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus closeDisabled=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus closeDisabled=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus closeTimer=1500 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus closeTimer=3000 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="brown" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="brown-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="cyan" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="cyan-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="default" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="green" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="green-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="grey" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="grey-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="orange" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="orange-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="pink" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="pink-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="purple" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="purple-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="red" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="red-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="yellow" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus colorSchema="yellow-rich" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus controlled=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus controlled=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus default props 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus descending=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus descending=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus descending=undefined 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus disabled=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus disabled=false 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus disabled=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  disabled={true}
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus disabled=true 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  disabled={true}
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus forceRender=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus forceRender=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus fullTextSearchPriority=0 1`] = `
<Alert
  className="uu5-bricks-alert-bus uu-fulltextsearch-0"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus hidden=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus hidden=false 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus hidden=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus hidden=true 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus id="myId" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="myId-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus id="test-id" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="test-id-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus mainAttrs=undefined 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus name="myName" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="bigBox" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="bigBoxCollection" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="box" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="box" 3`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="boxCollection" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="container" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="container"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel="page" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="page"
/>
`;

exports[`UU5.Bricks.AlertBus nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.AlertBus nestingLevel="spa" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="spa"
/>
`;

exports[`UU5.Bricks.AlertBus noIndex=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus noIndex=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus uu5-noindex uu-fulltextsearch-0"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus noPrint=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus noPrint=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus position="center" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus position="left" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  position="left"
/>
`;

exports[`UU5.Bricks.AlertBus position="right" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  position="right"
/>
`;

exports[`UU5.Bricks.AlertBus pureRender=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus pureRender=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  pureRender={true}
/>
`;

exports[`UU5.Bricks.AlertBus selected=false 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.AlertBus selected=true 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  selected={true}
/>
`;

exports[`UU5.Bricks.AlertBus style="padding:8px; borderRadius: 2px" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.AlertBus style={"backgroundColor":"red","color":"blue"} 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.AlertBus style={"margin":8} 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.AlertBus tooltip="My Tooltip" 1`] = `
<Alert
  className="uu5-bricks-alert-bus"
  hidden={true}
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  tooltip="My Tooltip"
/>
`;
